Added login page

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,13 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+
+// Theme colors
+
+$theme-pink: #F28095;
+//$theme-white: #F2DCE7;
+$theme-white: #FFFFEF;
+$theme-yellow: #FFC28F;
+$theme-dark-blue: #4E759C;
+$theme-light-blue: #8CC5DE;
