--- a/resources/sass/Authentification/_login.scss
+++ b/resources/sass/Authentification/_login.scss
@@ -1,75 +1,119 @@
 #login-body {
-  height:100vh;
-  background-image:url("/images/login_background.png");
+  //height:100vh;
+  background-image: url("/images/login_background.png");
   background-repeat: no-repeat;
   background-size: cover;
 
   background-position: 50% 50%;
   div.container-fluid {
+    position: relative;
+    min-height: 100vh;
+
+    .header-container {
+      height: 45px;
+      position: absolute;
+      top: 0;
+
+      .header-text {
+        padding: 10px;
+        h6 {
+          margin: 0;
+        }
+      }
+
+      .header-left-text {
+        color: $theme-dark-blue;
+      }
+
+      .header-right-text {
+        color: $theme-white;
+      };
+    }
     .left-side {
-      .login-form{
+
+      .login-form {
+        border:1px solid $theme-white;
         background-color: $theme-light-blue;
-        padding:15px 0;
-        margin:15px 0;
-        border-radius:3px;
+        padding: 15px 0;
+        border-radius: 3px;
+        position: relative;
 
         div.form-container {
-          margin:10px 0;
+          margin: 10px 0;
 
           > :first-child {
             margin: 0;
-            margin-top:10px;
-            margin-bottom:20px;
-            height:40%;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            height: 40%;
           }
+
           > :last-child {
             margin: 0;
-            margin-top:20px;
-            margin-bottom:10px;
-            height:40%;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            height: 40%;
           }
+
           .form-group {
-            padding:3px 0;
+            padding: 3px 0;
+
             .form-title {
               font-weight: bold;
               color: $theme-dark-blue;
               text-transform: uppercase;
             }
+
             input::placeholder {
               color: $theme-white;
-              opacity:1;
+              opacity: 1;
             }
-            .input-element{
-              border-radius:3px;
-              padding-left:3px;
-              background-color:transparent;
-              color:$theme-white;
-              border:none;
-              border-bottom:2px solid $theme-white;
-              height:35px;
-              outline:none;
+
+            .input-element {
+              border-radius: 3px;
+              padding-left: 3px;
+              background-color: transparent;
+              color: $theme-white;
+              border: none;
+              border-bottom: 2px solid $theme-white;
+              height: 35px;
+              outline: none;
             }
-            .login-button{
+
+            .login-button {
               background-color: $theme-white;
-              border:none;
+              border: none;
               color: $theme-dark-blue;
-              font-weight:bold;
-              height:60px;
+              font-weight: bold;
+              height: 60px;
             }
 
           }
         }
+
+        .forgot-password {
+          position: absolute;
+          bottom: 0;
+          padding: 2px 0;
+          outline: none;
+          text-decoration: none;
+          color: white;
+          font-size: 10px;
+        }
       }
     }
     .center-side {
+
       .text-container {
-        margin:15px 0;
+        margin: 15px 0;
         letter-spacing: 1px;
-        font-size:9px;
+        font-size: 9px;
         font-weight: bold;
+
         .o-color {
           color: $theme-white;
         }
+
         .r-color {
           color: $theme-white;
         }
@@ -78,40 +122,45 @@
     .right-side {
 
       .sign-up-button {
-        //background-color: $theme-white;
-        background-color: red;
-        border:none;
+        background-color: $theme-white;
         color: $theme-dark-blue;
-        font-weight:bold;
-        height:60px;
+        font-weight: bold;
+        height: 60px;
+        border: 1px solid $theme-light-blue;
+        //text-transform: uppercase;
+        text-decoration: none;
+        padding: 15px;
+        font-size: 18px;
+        margin: 15px 0;
       }
     }
 
   }
 
 }
+@media (max-width:575px) {
+
+}
 
 @media (min-width:576px) {
-  div.container-fluid {
-    height: 100%;
-  }
+
 
 }
-@media (max-width:575px){
-  div.container-fluid {
-    min-height: 100%;
-  }
-}
+
 @media (max-width: 767.98px) {
-  .login-form{
-    height:fit-content;
-    width:100%;
+  .login-form {
+    height: fit-content;
+    width: 100%;
+    margin: 45px 0 15px 0;
   }
 }
-@media (min-width: 768px){
-  .login-form{
+
+@media (min-width: 768px) {
+  .login-form {
     height: 300px;
-    width:85%;
+    width: 85%;
+    margin: 15px 0;
+
     @extend .d-flex !optional;
     @extend .justify-content-center !optional;
     @extend .align-items-center !optional;
